implemented applications api
